# ctxbla

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  run.bat
config/: crazytaxi.toml  crazytaxi_rexglue.toml  crazytaxi_switch_tables.toml
docs/: binary-analysis.md  speed-fix.md  xenonrecomp-workflow.md
ppc/: ppc_config.h  ppc_context.h  ppc_detail.h  ppc_recomp_shared.h
project/: CMakeLists.txt  CMakePresets.json
project/src/: keyboard_driver.cpp  keyboard_driver.h  main.cpp  menu.cpp  menu.h  settings.cpp  settings.h  stubs.cpp  test_boot.cpp
scripts/: extract_switch_tables.py
tools/: find_abi_addrs.py  parse_xex_imports.py
